modelParser.output
Terminals unused in grammar

   TM
   END
   MODE
   VISUALIZE
   TMAGGREG
   START
   METHOD
   ALGORITHM


Grammar

    0 $accept: model $end

    1 model: CONTINUOUS '{' continuous '}'
    2      | CONTINUOUS '{' continuous '}' unsafe_continuous
    3      | HYBRID '{' hybrid '}'
    4      | HYBRID '{' hybrid '}' unsafe_hybrid
    5      | stateVarDecls plotting CUTOFF NUM OUTPUT IDENT unsafe_continuous CONTINUOUSFLOW '{' tmVarDecls continuous_flowpipes '}'
    6      | stateVarDecls plotting CUTOFF NUM OUTPUT IDENT CONTINUOUSFLOW '{' tmVarDecls continuous_flowpipes '}'
    7      | stateVarDecls modeDecls COMPUTATIONPATHS '{' computation_paths '}' plotting OUTPUT IDENT unsafe_hybrid HYBRIDFLOW '{' hybrid_flowpipes '}'
    8      | stateVarDecls modeDecls COMPUTATIONPATHS '{' computation_paths '}' plotting OUTPUT IDENT HYBRIDFLOW '{' hybrid_flowpipes '}'
    9      | TAYLOR_PICARD '{' non_polynomial_rhs_picard '}'
   10      | TAYLOR_REMAINDER '{' non_polynomial_rhs_remainder '}'
   11      | TAYLOR_POLYNOMIAL '{' non_polynomial_rhs_no_remainder '}'
   12      | NONPOLY_CENTER '{' non_polynomial_rhs_center '}'

   13 continuous_flowpipes: continuous_flowpipes '{' interval_taylor_model taylor_model_domain '}'
   14                     | '{' interval_taylor_model taylor_model_domain '}'

   15 modeDecls: modeDecls IDENT '{' '{' CUTOFF NUM '}' '{' polynomial_constraints '}' '}'
   16          | IDENT '{' '{' CUTOFF NUM '}' '{' polynomial_constraints '}' '}'

   17 hybrid_flowpipes: hybrid_flowpipes IDENT '{' tmVarDecls continuous_flowpipes '}'
   18                 | IDENT '{' tmVarDecls continuous_flowpipes '}'

   19 computation_paths: computation_paths computation_path ';'
   20                  | computation_path ';'

   21 computation_path: computation_path '(' NUM ',' '[' NUM ',' NUM ']' ')' '-' '>' IDENT
   22                 | IDENT

   23 print: PRINTON
   24      | PRINTOFF

   25 unsafe_continuous: UNSAFESET '{' polynomial_constraints '}'

   26 unsafe_hybrid: UNSAFESET '{' hybrid_constraints '}'

   27 hybrid_constraints: hybrid_constraints IDENT '{' polynomial_constraints '}'
   28                   | %empty

   29 polynomial_constraints: polynomial_constraints constraint_polynomial LEQ NUM
   30                       | polynomial_constraints constraint_polynomial GEQ NUM
   31                       | polynomial_constraints constraint_polynomial EQ NUM
   32                       | polynomial_constraints constraint_polynomial BELONGSTO '[' NUM ',' NUM ']'
   33                       | polynomial_constraints constraint_polynomial LEQ IDENT
   34                       | polynomial_constraints constraint_polynomial GEQ IDENT
   35                       | polynomial_constraints constraint_polynomial EQ IDENT
   36                       | polynomial_constraints constraint_polynomial BELONGSTO '[' IDENT ',' IDENT ']'
   37                       | %empty

   38 linear_constraints: linear_constraints linear_polynomial LEQ NUM
   39                   | linear_constraints linear_polynomial GEQ NUM
   40                   | linear_constraints linear_polynomial EQ NUM
   41                   | linear_constraints linear_polynomial BELONGSTO '[' NUM ',' NUM ']'
   42                   | linear_constraints linear_polynomial LEQ IDENT
   43                   | linear_constraints linear_polynomial GEQ IDENT
   44                   | linear_constraints linear_polynomial EQ IDENT
   45                   | linear_constraints linear_polynomial BELONGSTO '[' IDENT ',' IDENT ']'
   46                   | %empty

   47 continuous: stateVarDecls SETTING '{' settings print '}' POLYODE1 '{' ode '}' INIT '{' init '}'
   48           | stateVarDecls SETTING '{' settings print '}' POLYODE2 '{' ode '}' INIT '{' init '}'
   49           | stateVarDecls SETTING '{' settings print '}' POLYODE3 '{' ode '}' INIT '{' init '}'
   50           | stateVarDecls SETTING '{' settings print '}' NPODE_TAYLOR '{' npode '}' INIT '{' init '}'
   51           | stateVarDecls SETTING '{' settings print '}' LINEARODE '{' linear_ode '}' INIT '{' init '}'
   52           | stateVarDecls parDecls SETTING '{' settings print '}' POLYODE1 '{' ode '}' INIT '{' init '}'
   53           | stateVarDecls parDecls SETTING '{' settings print '}' POLYODE2 '{' ode '}' INIT '{' init '}'
   54           | stateVarDecls parDecls SETTING '{' settings print '}' POLYODE3 '{' ode '}' INIT '{' init '}'
   55           | stateVarDecls parDecls SETTING '{' settings print '}' NPODE_TAYLOR '{' npode '}' INIT '{' init '}'
   56           | stateVarDecls parDecls SETTING '{' settings print '}' LINEARODE '{' linear_ode '}' INIT '{' init '}'

   57 hybrid: stateVarDecls SETTING '{' settings MAXJMPS NUM print '}' MODES '{' modes '}' JUMPS '{' jumps '}' INIT '{' hybrid_init '}'
   58       | stateVarDecls parDecls SETTING '{' settings MAXJMPS NUM print '}' MODES '{' modes '}' JUMPS '{' jumps '}' INIT '{' hybrid_init '}'

   59 hybrid_init: IDENT '{' intervals '}'
   60            | IDENT '{' tmVarDecls taylor_model taylor_model_domain '}'

   61 modes: modes IDENT local_setting '{' POLYODE1 '{' ode '}' INV '{' polynomial_constraints '}' '}'
   62      | IDENT local_setting '{' POLYODE1 '{' ode '}' INV '{' polynomial_constraints '}' '}'
   63      | modes IDENT local_setting '{' POLYODE2 '{' ode '}' INV '{' polynomial_constraints '}' '}'
   64      | IDENT local_setting '{' POLYODE2 '{' ode '}' INV '{' polynomial_constraints '}' '}'
   65      | modes IDENT local_setting '{' POLYODE3 '{' ode '}' INV '{' polynomial_constraints '}' '}'
   66      | IDENT local_setting '{' POLYODE3 '{' ode '}' INV '{' polynomial_constraints '}' '}'
   67      | modes IDENT local_setting '{' NPODE_TAYLOR '{' npode '}' INV '{' polynomial_constraints '}' '}'
   68      | IDENT local_setting '{' NPODE_TAYLOR '{' npode '}' INV '{' polynomial_constraints '}' '}'
   69      | modes IDENT local_setting '{' LINEARODE '{' linear_ode '}' INV '{' linear_constraints '}' '}'
   70      | IDENT local_setting '{' LINEARODE '{' linear_ode '}' INV '{' linear_constraints '}' '}'

   71 local_setting: SETTING '{' parameters '}'
   72              | %empty

   73 parameters: parameters FIXEDST NUM
   74           | parameters REMEST NUM
   75           | parameters REMEST '{' remainders '}'
   76           | parameters QRPRECOND
   77           | parameters IDPRECOND
   78           | parameters FIXEDORD NUM
   79           | parameters CUTOFF NUM
   80           | parameters ADAPTIVEST '{' MIN NUM ',' MAX NUM '}'
   81           | parameters ADAPTIVEORD '{' MIN NUM ',' MAX NUM '}'
   82           | parameters FIXEDORD '{' orders '}'
   83           | parameters ADAPTIVEORD '{' MIN '{' orders '}' ',' MAX '{' orders '}' '}'
   84           | %empty

   85 jumps: jumps IDENT '-' '>' IDENT GUARD '{' polynomial_constraints '}' RESET '{' reset '}' PARAAGGREG '{' real_valued_vectors '}'
   86      | jumps IDENT '-' '>' IDENT GUARD '{' polynomial_constraints '}' RESET '{' reset '}' INTAGGREG
   87      | %empty

   88 reset: reset IDENT '\'' ASSIGN reset_polynomial '+' '[' NUM ',' NUM ']'
   89      | reset IDENT '\'' ASSIGN reset_polynomial
   90      | %empty

   91 real_valued_vectors: real_valued_vectors real_valued_vector
   92                    | %empty

   93 real_valued_vector: '[' vector_components ']'

   94 vector_components: vector_components ',' IDENT ':' NUM
   95                  | IDENT ':' NUM

   96 stateVarDecls: STATEVAR stateIdDeclList

   97 stateIdDeclList: stateIdDeclList ',' IDENT
   98                | IDENT

   99 parDecls: PAR '{' parDeclList '}'

  100 parDeclList: parDeclList IDENT EQ NUM
  101            | IDENT EQ NUM

  102 settings: FIXEDST NUM TIME NUM remainder_estimation precondition plotting FIXEDORD NUM CUTOFF NUM PRECISION NUM OUTPUT IDENT algorithm decomposition
  103         | FIXEDST NUM TIME NUM remainder_estimation precondition plotting ADAPTIVEORD '{' MIN NUM ',' MAX NUM '}' CUTOFF NUM PRECISION NUM OUTPUT IDENT
  104         | FIXEDST NUM TIME NUM remainder_estimation precondition plotting FIXEDORD '{' orders '}' CUTOFF NUM PRECISION NUM OUTPUT IDENT
  105         | FIXEDST NUM TIME NUM remainder_estimation precondition plotting ADAPTIVEORD '{' MIN '{' orders '}' ',' MAX '{' orders '}' '}' CUTOFF NUM PRECISION NUM OUTPUT IDENT
  106         | ADAPTIVEST '{' MIN NUM ',' MAX NUM '}' TIME NUM remainder_estimation precondition plotting FIXEDORD NUM CUTOFF NUM PRECISION NUM OUTPUT IDENT
  107         | ADAPTIVEST '{' MIN NUM ',' MAX NUM '}' TIME NUM remainder_estimation precondition plotting FIXEDORD '{' orders '}' CUTOFF NUM PRECISION NUM OUTPUT IDENT

  108 remainder_estimation: REMEST NUM
  109                     | REMEST '{' remainders '}'

  110 remainders: remainders ',' IDENT ':' '[' NUM ',' NUM ']'
  111           | IDENT ':' '[' NUM ',' NUM ']'

  112 orders: orders ',' IDENT ':' NUM
  113       | IDENT ':' NUM

  114 precondition: QRPRECOND
  115             | IDPRECOND
  116             | SHRINRWRAPPING NUM

  117 algorithm: ALG_SIMPLE_IMPL
  118          | ALG_SIMPLE_COMP
  119          | ALG_SMALL_COMP
  120          | ALG_FLOW
  121          | %empty

  122 decomposition: DECOMPOSITION '[' components ']'
  123              | NODECOMPOSITION
  124              | %empty

  125 components: components ',' component
  126           | component

  127 component: '[' compVarIds ']'

  128 compVarIds: compVarIds ',' IDENT
  129           | IDENT

  130 plotting: GNUPLOT INTERVAL IDENT ',' IDENT
  131         | GNUPLOT OCTAGON IDENT ',' IDENT
  132         | GNUPLOT GRID NUM IDENT ',' IDENT
  133         | MATLAB INTERVAL IDENT ',' IDENT
  134         | MATLAB OCTAGON IDENT ',' IDENT
  135         | MATLAB GRID NUM IDENT ',' IDENT

  136 init: tmVarDecls taylor_model taylor_model_domain
  137     | intervals

  138 tmVarDecls: TMVAR tmIdDeclList

  139 tmIdDeclList: tmIdDeclList ',' IDENT
  140             | IDENT

  141 taylor_model: taylor_model IDENT EQ polynomial '+' '[' NUM ',' NUM ']'
  142             | %empty

  143 taylor_model_domain: taylor_model_domain IDENT BELONGSTO '[' NUM ',' NUM ']'
  144                    | IDENT BELONGSTO '[' NUM ',' NUM ']'

  145 intervals: intervals IDENT BELONGSTO '[' NUM ',' NUM ']'
  146          | %empty

  147 ode: ode IDENT '\'' EQ ODEpolynomial
  148    | %empty

  149 npode: npode IDENT '\'' EQ non_polynomial_rhs_string
  150      | %empty

  151 linear_ode: linear_ode IDENT '\'' EQ linear_polynomial
  152           | %empty

  153 polynomial: polynomial '+' polynomial
  154           | polynomial '-' polynomial
  155           | '(' polynomial ')'
  156           | polynomial '*' polynomial
  157           | polynomial '^' NUM
  158           | '-' polynomial
  159           | IDENT
  160           | NUM

  161 ODEpolynomial: ODEpolynomial '+' ODEpolynomial
  162              | ODEpolynomial '-' ODEpolynomial
  163              | '(' ODEpolynomial ')'
  164              | ODEpolynomial '*' ODEpolynomial
  165              | ODEpolynomial '^' NUM
  166              | '-' ODEpolynomial
  167              | IDENT
  168              | '[' NUM ',' NUM ']'
  169              | NUM

  170 constraint_polynomial: constraint_polynomial '+' constraint_polynomial
  171                      | constraint_polynomial '-' constraint_polynomial
  172                      | '(' constraint_polynomial ')'
  173                      | constraint_polynomial '*' constraint_polynomial
  174                      | constraint_polynomial '^' NUM
  175                      | '-' constraint_polynomial
  176                      | IDENT
  177                      | NUM

  178 reset_polynomial: reset_polynomial '+' reset_polynomial
  179                 | reset_polynomial '-' reset_polynomial
  180                 | '(' reset_polynomial ')'
  181                 | reset_polynomial '*' reset_polynomial
  182                 | reset_polynomial '^' NUM
  183                 | '-' reset_polynomial
  184                 | IDENT
  185                 | NUM

  186 interval_taylor_model: interval_taylor_model IDENT EQ interval_polynomial '+' '[' NUM ',' NUM ']'
  187                      | IDENT EQ interval_polynomial '+' '[' NUM ',' NUM ']'

  188 interval_polynomial: interval_polynomial '+' interval_polynomial
  189                    | interval_polynomial '-' interval_polynomial
  190                    | '(' interval_polynomial ')'
  191                    | interval_polynomial '*' interval_polynomial
  192                    | interval_polynomial '^' NUM
  193                    | '-' interval_polynomial
  194                    | IDENT
  195                    | '[' NUM ',' NUM ']'
  196                    | NUM

  197 non_polynomial_rhs_picard: non_polynomial_rhs_picard '+' non_polynomial_rhs_picard
  198                          | non_polynomial_rhs_picard '-' non_polynomial_rhs_picard
  199                          | non_polynomial_rhs_picard '*' non_polynomial_rhs_picard
  200                          | '(' non_polynomial_rhs_picard ')'
  201                          | non_polynomial_rhs_picard '/' non_polynomial_rhs_picard
  202                          | EXP '(' non_polynomial_rhs_picard ')'
  203                          | SIN '(' non_polynomial_rhs_picard ')'
  204                          | COS '(' non_polynomial_rhs_picard ')'
  205                          | LOG '(' non_polynomial_rhs_picard ')'
  206                          | SQRT '(' non_polynomial_rhs_picard ')'
  207                          | non_polynomial_rhs_picard '^' NUM
  208                          | '-' non_polynomial_rhs_picard
  209                          | IDENT
  210                          | '[' NUM ',' NUM ']'

  211 non_polynomial_rhs_remainder: non_polynomial_rhs_remainder '+' non_polynomial_rhs_remainder
  212                             | non_polynomial_rhs_remainder '-' non_polynomial_rhs_remainder
  213                             | non_polynomial_rhs_remainder '*' non_polynomial_rhs_remainder
  214                             | '(' non_polynomial_rhs_remainder ')'
  215                             | non_polynomial_rhs_remainder '/' non_polynomial_rhs_remainder
  216                             | EXP '(' non_polynomial_rhs_remainder ')'
  217                             | SIN '(' non_polynomial_rhs_remainder ')'
  218                             | COS '(' non_polynomial_rhs_remainder ')'
  219                             | LOG '(' non_polynomial_rhs_remainder ')'
  220                             | SQRT '(' non_polynomial_rhs_remainder ')'
  221                             | non_polynomial_rhs_remainder '^' NUM
  222                             | '-' non_polynomial_rhs_remainder
  223                             | IDENT
  224                             | '[' NUM ',' NUM ']'

  225 non_polynomial_rhs_no_remainder: non_polynomial_rhs_no_remainder '+' non_polynomial_rhs_no_remainder
  226                                | non_polynomial_rhs_no_remainder '-' non_polynomial_rhs_no_remainder
  227                                | non_polynomial_rhs_no_remainder '*' non_polynomial_rhs_no_remainder
  228                                | '(' non_polynomial_rhs_no_remainder ')'
  229                                | non_polynomial_rhs_no_remainder '/' non_polynomial_rhs_no_remainder
  230                                | EXP '(' non_polynomial_rhs_no_remainder ')'
  231                                | SIN '(' non_polynomial_rhs_no_remainder ')'
  232                                | COS '(' non_polynomial_rhs_no_remainder ')'
  233                                | LOG '(' non_polynomial_rhs_no_remainder ')'
  234                                | SQRT '(' non_polynomial_rhs_no_remainder ')'
  235                                | non_polynomial_rhs_no_remainder '^' NUM
  236                                | '-' non_polynomial_rhs_no_remainder
  237                                | IDENT
  238                                | '[' NUM ',' NUM ']'

  239 non_polynomial_rhs_string: non_polynomial_rhs_string '+' non_polynomial_rhs_string
  240                          | non_polynomial_rhs_string '-' non_polynomial_rhs_string
  241                          | non_polynomial_rhs_string '*' non_polynomial_rhs_string
  242                          | '(' non_polynomial_rhs_string ')'
  243                          | non_polynomial_rhs_string '/' non_polynomial_rhs_string
  244                          | EXP '(' non_polynomial_rhs_string ')'
  245                          | SIN '(' non_polynomial_rhs_string ')'
  246                          | COS '(' non_polynomial_rhs_string ')'
  247                          | LOG '(' non_polynomial_rhs_string ')'
  248                          | SQRT '(' non_polynomial_rhs_string ')'
  249                          | non_polynomial_rhs_string '^' NUM
  250                          | '-' non_polynomial_rhs_string
  251                          | IDENT
  252                          | '[' NUM ',' NUM ']'
  253                          | NUM

  254 non_polynomial_rhs_center: non_polynomial_rhs_center '+' non_polynomial_rhs_center
  255                          | non_polynomial_rhs_center '-' non_polynomial_rhs_center
  256                          | non_polynomial_rhs_center '*' non_polynomial_rhs_center
  257                          | '(' non_polynomial_rhs_center ')'
  258                          | non_polynomial_rhs_center '/' non_polynomial_rhs_center
  259                          | EXP '(' non_polynomial_rhs_center ')'
  260                          | SIN '(' non_polynomial_rhs_center ')'
  261                          | COS '(' non_polynomial_rhs_center ')'
  262                          | LOG '(' non_polynomial_rhs_center ')'
  263                          | SQRT '(' non_polynomial_rhs_center ')'
  264                          | non_polynomial_rhs_center '^' NUM
  265                          | '-' non_polynomial_rhs_center
  266                          | IDENT
  267                          | '[' NUM ',' NUM ']'
  268                          | NUM

  269 linear_polynomial: linear_polynomial '+' linear_polynomial
  270                  | linear_polynomial '-' linear_polynomial
  271                  | linear_polynomial '*' linear_polynomial
  272                  | '(' linear_polynomial ')'
  273                  | '-' linear_polynomial
  274                  | IDENT
  275                  | NUM
  276                  | '[' NUM ',' NUM ']'


Terminals, with rules where they appear

$end (0) 0
'\'' (39) 88 89 147 149 151
'(' (40) 21 155 163 172 180 190 200 202 203 204 205 206 214 216 217
    218 219 220 228 230 231 232 233 234 242 244 245 246 247 248 257
    259 260 261 262 263 272
')' (41) 21 155 163 172 180 190 200 202 203 204 205 206 214 216 217
    218 219 220 228 230 231 232 233 234 242 244 245 246 247 248 257
    259 260 261 262 263 272
'*' (42) 156 164 173 181 191 199 213 227 241 256 271
'+' (43) 88 141 153 161 170 178 186 187 188 197 211 225 239 254 269
',' (44) 21 32 36 41 45 80 81 83 88 94 97 103 105 106 107 110 111 112
    125 128 130 131 132 133 134 135 139 141 143 144 145 168 186 187
    195 210 224 238 252 267 276
'-' (45) 21 85 86 154 158 162 166 171 175 179 183 189 193 198 208 212
    222 226 236 240 250 255 265 270 273
'/' (47) 201 215 229 243 258
':' (58) 94 95 110 111 112 113
';' (59) 19 20
'>' (62) 21 85 86
'[' (91) 21 32 36 41 45 88 93 110 111 122 127 141 143 144 145 168 186
    187 195 210 224 238 252 267 276
']' (93) 21 32 36 41 45 88 93 110 111 122 127 141 143 144 145 168 186
    187 195 210 224 238 252 267 276
'^' (94) 157 165 174 182 192 207 221 235 249 264
'{' (123) 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 25 26 27 47
    48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70 71 75 80 81 82 83 85 86 99 103 104 105 106 107 109
'}' (125) 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 25 26 27 47
    48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70 71 75 80 81 82 83 85 86 99 103 104 105 106 107 109
error (256)
NUM (258) 5 6 15 16 21 29 30 31 32 38 39 40 41 57 58 73 74 78 79 80
    81 88 94 95 100 101 102 103 104 105 106 107 108 110 111 112 113
    116 132 135 141 143 144 145 157 160 165 168 169 174 177 182 185
    186 187 192 195 196 207 210 221 224 235 238 249 252 253 264 267
    268 275 276
IDENT (259) 5 6 7 8 15 16 17 18 21 22 27 33 34 35 36 42 43 44 45 59
    60 61 62 63 64 65 66 67 68 69 70 85 86 88 89 94 95 97 98 100 101
    102 103 104 105 106 107 110 111 112 113 128 129 130 131 132 133
    134 135 139 140 141 143 144 145 147 149 151 159 167 176 184 186
    187 194 209 223 237 251 266 274
STATEVAR (260) 96
TMVAR (261) 138
TM (262)
EQ (263) 31 35 40 44 100 101 141 147 149 151 186 187
GEQ (264) 30 34 39 43
LEQ (265) 29 33 38 42
ASSIGN (266) 88 89
END (267)
MODE (268)
INIT (269) 47 48 49 50 51 52 53 54 55 56 57 58
BELONGSTO (270) 32 36 41 45 143 144 145
POLYODE1 (271) 47 52 61 62
POLYODE2 (272) 48 53 63 64
POLYODE3 (273) 49 54 65 66
VISUALIZE (274)
PARAAGGREG (275) 85
INTAGGREG (276) 86
TMAGGREG (277)
OUTPUT (278) 5 6 7 8 102 103 104 105 106 107
CONTINUOUS (279) 1 2
HYBRID (280) 3 4
SETTING (281) 47 48 49 50 51 52 53 54 55 56 57 58 71
FIXEDST (282) 73 102 103 104 105
FIXEDORD (283) 78 82 102 104 106 107
ADAPTIVEST (284) 80 106 107
ADAPTIVEORD (285) 81 83 103 105
MIN (286) 80 81 83 103 105 106 107
MAX (287) 80 81 83 103 105 106 107
REMEST (288) 74 75 108 109
INTERVAL (289) 130 133
OCTAGON (290) 131 134
GRID (291) 132 135
QRPRECOND (292) 76 114
IDPRECOND (293) 77 115
SHRINRWRAPPING (294) 116
TIME (295) 102 103 104 105 106 107
MODES (296) 57 58
JUMPS (297) 57 58
INV (298) 61 62 63 64 65 66 67 68 69 70
GUARD (299) 85 86
RESET (300) 85 86
START (301)
MAXJMPS (302) 57 58
PRINTON (303) 23
PRINTOFF (304) 24
UNSAFESET (305) 25 26
CONTINUOUSFLOW (306) 5 6
HYBRIDFLOW (307) 7 8
TAYLOR_PICARD (308) 9
TAYLOR_REMAINDER (309) 10
TAYLOR_POLYNOMIAL (310) 11
NONPOLY_CENTER (311) 12
EXP (312) 202 216 230 244 259
SIN (313) 203 217 231 245 260
COS (314) 204 218 232 246 261
LOG (315) 205 219 233 247 262
SQRT (316) 206 220 234 248 263
NPODE_TAYLOR (317) 50 55 67 68
CUTOFF (318) 5 6 15 16 79 102 103 104 105 106 107
PRECISION (319) 102 103 104 105 106 107
GNUPLOT (320) 130 131 132
MATLAB (321) 133 134 135
COMPUTATIONPATHS (322) 7 8
LINEARODE (323) 51 56 69 70
PAR (324) 99
METHOD (325)
ALGORITHM (326)
ALG_FLOW (327) 120
ALG_SIMPLE_IMPL (328) 117
ALG_SIMPLE_COMP (329) 118
ALG_SMALL_COMP (330) 119
DECOMPOSITION (331) 122
NODECOMPOSITION (332) 123
uminus (333)


Nonterminals, with rules where they appear

$accept (95)
    on left: 0
model (96)
    on left: 1 2 3 4 5 6 7 8 9 10 11 12, on right: 0
continuous_flowpipes (97)
    on left: 13 14, on right: 5 6 13 17 18
modeDecls (98)
    on left: 15 16, on right: 7 8 15
hybrid_flowpipes (99)
    on left: 17 18, on right: 7 8 17
computation_paths (100)
    on left: 19 20, on right: 7 8 19
computation_path (101)
    on left: 21 22, on right: 19 20 21
print (102)
    on left: 23 24, on right: 47 48 49 50 51 52 53 54 55 56 57 58
unsafe_continuous (103)
    on left: 25, on right: 2 5
unsafe_hybrid (104)
    on left: 26, on right: 4 7
hybrid_constraints (105)
    on left: 27 28, on right: 26 27
polynomial_constraints (106)
    on left: 29 30 31 32 33 34 35 36 37, on right: 15 16 25 27 29 30
    31 32 33 34 35 36 61 62 63 64 65 66 67 68 85 86
linear_constraints (107)
    on left: 38 39 40 41 42 43 44 45 46, on right: 38 39 40 41 42 43
    44 45 69 70
continuous (108)
    on left: 47 48 49 50 51 52 53 54 55 56, on right: 1 2
hybrid (109)
    on left: 57 58, on right: 3 4
hybrid_init (110)
    on left: 59 60, on right: 57 58
modes (111)
    on left: 61 62 63 64 65 66 67 68 69 70, on right: 57 58 61 63 65
    67 69
local_setting (112)
    on left: 71 72, on right: 61 62 63 64 65 66 67 68 69 70
parameters (113)
    on left: 73 74 75 76 77 78 79 80 81 82 83 84, on right: 71 73 74
    75 76 77 78 79 80 81 82 83
jumps (114)
    on left: 85 86 87, on right: 57 58 85 86
reset (115)
    on left: 88 89 90, on right: 85 86 88 89
real_valued_vectors (116)
    on left: 91 92, on right: 85 91
real_valued_vector (117)
    on left: 93, on right: 91
vector_components (118)
    on left: 94 95, on right: 93 94
stateVarDecls (119)
    on left: 96, on right: 5 6 7 8 47 48 49 50 51 52 53 54 55 56 57
    58
stateIdDeclList (120)
    on left: 97 98, on right: 96 97
parDecls (121)
    on left: 99, on right: 52 53 54 55 56 58
parDeclList (122)
    on left: 100 101, on right: 99 100
settings (123)
    on left: 102 103 104 105 106 107, on right: 47 48 49 50 51 52 53
    54 55 56 57 58
remainder_estimation (124)
    on left: 108 109, on right: 102 103 104 105 106 107
remainders (125)
    on left: 110 111, on right: 75 109 110
orders (126)
    on left: 112 113, on right: 82 83 104 105 107 112
precondition (127)
    on left: 114 115 116, on right: 102 103 104 105 106 107
algorithm (128)
    on left: 117 118 119 120 121, on right: 102
decomposition (129)
    on left: 122 123 124, on right: 102
components (130)
    on left: 125 126, on right: 122 125
component (131)
    on left: 127, on right: 125 126
compVarIds (132)
    on left: 128 129, on right: 127 128
plotting (133)
    on left: 130 131 132 133 134 135, on right: 5 6 7 8 102 103 104
    105 106 107
init (134)
    on left: 136 137, on right: 47 48 49 50 51 52 53 54 55 56
tmVarDecls (135)
    on left: 138, on right: 5 6 17 18 60 136
tmIdDeclList (136)
    on left: 139 140, on right: 138 139
taylor_model (137)
    on left: 141 142, on right: 60 136 141
taylor_model_domain (138)
    on left: 143 144, on right: 13 14 60 136 143
intervals (139)
    on left: 145 146, on right: 59 137 145
ode (140)
    on left: 147 148, on right: 47 48 49 52 53 54 61 62 63 64 65 66
    147
npode (141)
    on left: 149 150, on right: 50 55 67 68 149
linear_ode (142)
    on left: 151 152, on right: 51 56 69 70 151
polynomial (143)
    on left: 153 154 155 156 157 158 159 160, on right: 141 153 154
    155 156 157 158
ODEpolynomial (144)
    on left: 161 162 163 164 165 166 167 168 169, on right: 147 161
    162 163 164 165 166
constraint_polynomial (145)
    on left: 170 171 172 173 174 175 176 177, on right: 29 30 31 32
    33 34 35 36 170 171 172 173 174 175
reset_polynomial (146)
    on left: 178 179 180 181 182 183 184 185, on right: 88 89 178 179
    180 181 182 183
interval_taylor_model (147)
    on left: 186 187, on right: 13 14 186
interval_polynomial (148)
    on left: 188 189 190 191 192 193 194 195 196, on right: 186 187
    188 189 190 191 192 193
non_polynomial_rhs_picard (149)
    on left: 197 198 199 200 201 202 203 204 205 206 207 208 209 210,
    on right: 9 197 198 199 200 201 202 203 204 205 206 207 208
non_polynomial_rhs_remainder (150)
    on left: 211 212 213 214 215 216 217 218 219 220 221 222 223 224,
    on right: 10 211 212 213 214 215 216 217 218 219 220 221 222
non_polynomial_rhs_no_remainder (151)
    on left: 225 226 227 228 229 230 231 232 233 234 235 236 237 238,
    on right: 11 225 226 227 228 229 230 231 232 233 234 235 236
non_polynomial_rhs_string (152)
    on left: 239 240 241 242 243 244 245 246 247 248 249 250 251 252
    253, on right: 149 239 240 241 242 243 244 245 246 247 248 249
    250
non_polynomial_rhs_center (153)
    on left: 254 255 256 257 258 259 260 261 262 263 264 265 266 267
    268, on right: 12 254 255 256 257 258 259 260 261 262 263 264 265
linear_polynomial (154)
    on left: 269 270 271 272 273 274 275 276, on right: 38 39 40 41
    42 43 44 45 151 269 270 271 272 273


State 0

    0 $accept: . model $end

    STATEVAR           shift, and go to state 1
    CONTINUOUS         shift, and go to state 2
    HYBRID             shift, and go to state 3
    TAYLOR_PICARD      shift, and go to state 4
    TAYLOR_REMAINDER   shift, and go to state 5
    TAYLOR_POLYNOMIAL  shift, and go to state 6
    NONPOLY_CENTER     shift, and go to state 7

    model          go to state 8
    stateVarDecls  go to state 9


State 1

   96 stateVarDecls: STATEVAR . stateIdDeclList

    IDENT  shift, and go to state 10

    stateIdDeclList  go to state 11


State 2

    1 model: CONTINUOUS . '{' continuous '}'
    2      | CONTINUOUS . '{' continuous '}' unsafe_continuous

    '{'  shift, and go to state 12


State 3

    3 model: HYBRID . '{' hybrid '}'
    4      | HYBRID . '{' hybrid '}' unsafe_hybrid

    '{'  shift, and go to state 13


State 4

    9 model: TAYLOR_PICARD . '{' non_polynomial_rhs_picard '}'

    '{'  shift, and go to state 14


State 5

   10 model: TAYLOR_REMAINDER . '{' non_polynomial_rhs_remainder '}'

    '{'  shift, and go to state 15


State 6

   11 model: TAYLOR_POLYNOMIAL . '{' non_polynomial_rhs_no_remainder '}'

    '{'  shift, and go to state 16


State 7

   12 model: NONPOLY_CENTER . '{' non_polynomial_rhs_center '}'

    '{'  shift, and go to state 17


State 8

    0 $accept: model . $end

    $end  shift, and go to state 18


State 9

    5 model: stateVarDecls . plotting CUTOFF NUM OUTPUT IDENT unsafe_continuous CONTINUOUSFLOW '{' tmVarDecls continuous_flowpipes '}'
    6      | stateVarDecls . plotting CUTOFF NUM OUTPUT IDENT CONTINUOUSFLOW '{' tmVarDecls continuous_flowpipes '}'
    7      | stateVarDecls . modeDecls COMPUTATIONPATHS '{' computation_paths '}' plotting OUTPUT IDENT unsafe_hybrid HYBRIDFLOW '{' hybrid_flowpipes '}'
    8      | stateVarDecls . modeDecls COMPUTATIONPATHS '{' computation_paths '}' plotting OUTPUT IDENT HYBRIDFLOW '{' hybrid_flowpipes '}'

    IDENT    shift, and go to state 19
    GNUPLOT  shift, and go to state 20
    MATLAB   shift, and go to state 21

    modeDecls  go to state 22
    plotting   go to state 23


State 10

   98 stateIdDeclList: IDENT .

    $default  reduce using rule 98 (stateIdDeclList)


State 11

   96 stateVarDecls: STATEVAR stateIdDeclList .
   97 stateIdDeclList: stateIdDeclList . ',' IDENT

    ','  shift, and go to state 24

    $default  reduce using rule 96 (stateVarDecls)


State 12

    1 model: CONTINUOUS '{' . continuous '}'
    2      | CONTINUOUS '{' . continuous '}' unsafe_continuous

    STATEVAR  shift, and go to state 1

    continuous     go to state 25
    stateVarDecls  go to state 26


State 13

    3 model: HYBRID '{' . hybrid '}'
    4      | HYBRID '{' . hybrid '}' unsafe_hybrid

    STATEVAR  shift, and go to state 1

    hybrid         go to state 27
    stateVarDecls  go to state 28


State 14

    9 model: TAYLOR_PICARD '{' . non_polynomial_rhs_picard '}'

    IDENT  shift, and go to state 29
    EXP    shift, and go to state 30
    SIN    shift, and go to state 31
    COS    shift, and go to state 32
    LOG    shift, and go to state 33
    SQRT   shift, and go to state 34
    '-'    shift, and go to state 35
    '('    shift, and go to state 36
    '['    shift, and go to state 37

    non_polynomial_rhs_picard  go to state 38


State 15

   10 model: TAYLOR_REMAINDER '{' . non_polynomial_rhs_remainder '}'
